--- a/crowdwalk/build.gradle
+++ b/crowdwalk/build.gradle
@@ -57,45 +57,45 @@ println "Platform: $platform"
 repositories {
     mavenCentral()
     maven {
-        url "http://mvn.topobyte.de"
+        url "https://mvn.topobyte.de"
     }
     maven {
-        url "http://mvn.slimjars.com"
+        url "https://mvn.slimjars.com"
     }
 }
 
 dependencies {
-    compile localGroovy()   // Gradleに同梱されているGroovyを使う
-    compile 'commons-cli:commons-cli:1.2'
-    compile 'commons-codec:commons-codec:1.10'
-    compile 'org.apache.xmlgraphics:batik-awt-util:1.8'
-    compile 'xalan:xalan:2.7.0'
-    compile 'net.arnx:jsonic:1.3.10'
-    compile 'net.sf.opencsv:opencsv:2.3'
-    compile 'junit:junit:4.12'
+    implementation localGroovy()   // Gradleに同梱されているGroovyを使う
+    implementation 'commons-cli:commons-cli:1.2'
+    implementation 'commons-codec:commons-codec:1.10'
+    implementation 'org.apache.xmlgraphics:batik-awt-util:1.8'
+    implementation 'xalan:xalan:2.7.0'
+    implementation 'net.arnx:jsonic:1.3.10'
+    implementation 'net.sf.opencsv:opencsv:2.3'
+    implementation 'junit:junit:4.12'
     // https://mvnrepository.com/artifact/org.jruby/jruby-complete
-    compile group: 'org.jruby', name: 'jruby-complete', version: '9.1.15.0'
-    compile 'org.osgeo:proj4j:0.1.0'
-    compile 'math.geom2d:javaGeom:0.11.1'
-    compile 'com.opencsv:opencsv:3.8'
+    implementation group: 'org.jruby', name: 'jruby-complete', version: '9.1.15.0'
+    implementation 'org.osgeo:proj4j:0.1.0'
+    implementation 'math.geom2d:javaGeom:0.11.1'
+    implementation 'com.opencsv:opencsv:3.8'
     // https://mvnrepository.com/artifact/org.orbisgis/poly2tri-core
-    compile group: 'org.orbisgis', name: 'poly2tri-core', version: '0.1.2'
+    implementation group: 'org.orbisgis', name: 'poly2tri-core', version: '0.1.2'
     // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
-    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
     // https://mvnrepository.com/artifact/com.vladsch.flexmark/flexmark-all
-    compile group: 'com.vladsch.flexmark', name: 'flexmark-all', version: '0.28.34'
+    implementation group: 'com.vladsch.flexmark', name: 'flexmark-all', version: '0.28.34'
     // https://jaryard.com/projects/osm4j/
-    compile 'de.topobyte:osm4j-core:0.1.0'
-    compile 'de.topobyte:osm4j-utils:0.1.2'
-    compile 'de.topobyte:osm4j-xml:0.1.2'
+    implementation 'de.topobyte:osm4j-core:0.1.0'
+    implementation 'de.topobyte:osm4j-utils:0.1.2'
+    implementation 'de.topobyte:osm4j-xml:0.1.2'
 
     if (! onlyCuiSimulator && javaVersion >= 11.0) {
-        compile "org.openjfx:javafx-base:11:$platform"
-        compile "org.openjfx:javafx-graphics:11:$platform"
-        compile "org.openjfx:javafx-controls:11:$platform"
-        compile "org.openjfx:javafx-swing:11:$platform"
-        compile "org.openjfx:javafx-web:11:$platform"
-        compile "org.openjfx:javafx-media:11:$platform"
+        implementation "org.openjfx:javafx-base:11:$platform"
+        implementation "org.openjfx:javafx-graphics:11:$platform"
+        implementation "org.openjfx:javafx-controls:11:$platform"
+        implementation "org.openjfx:javafx-swing:11:$platform"
+        implementation "org.openjfx:javafx-web:11:$platform"
+        implementation "org.openjfx:javafx-media:11:$platform"
     }
 }
 
@@ -124,16 +124,16 @@ compileJava {
     options.encoding = defaultEncoding
 //    options.compilerArgs = ['-Xlint:unchecked', '-Xdiags:verbose']
     if (! onlyCuiSimulator && javaVersion >= 11.0) {
-        options.compilerArgs = [
+        options.compilerArgs.addAll([
             '-Xdiags:verbose',
             '--module-path', classpath.asPath,
             '--add-modules', 'javafx.controls',
             '--add-modules', 'javafx.swing',
             '--add-modules', 'javafx.web',
             '--add-modules', 'javafx.media'
-        ]
+        ])
     } else {
-        options.compilerArgs = ['-Xdiags:verbose']
+        options.compilerArgs.addAll(['-Xdiags:verbose'])
     }
 }
 
@@ -215,12 +215,17 @@ jar {
     //}
     dependsOn copyRubyLib
 
+    /* [20211116 S.Takami] 
+     */
+    duplicatesStrategy= DuplicatesStrategy.INCLUDE
+    
+
     if (onlyCuiSimulator) {
         manifest.mainAttributes("Main-Class" : "nodagumi.ananPJ.CuiCrowdWalkLauncher")
     } else {
         manifest.mainAttributes("Main-Class" : "nodagumi.ananPJ.CrowdWalkLauncher")
     }
-    from (configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }) {
+    from (configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }) {
         exclude 'META-INF/MANIFEST.MF'
         exclude 'META-INF/*.SF'
         exclude 'META-INF/*.DSA'
