--- a/crowdwalk/src/main/resources/agent_appearance_classes.json
+++ b/crowdwalk/src/main/resources/agent_appearance_classes.json
@@ -1,5 +1,6 @@
 {
     "SpeedModel" : "nodagumi.ananPJ.Gui.AgentAppearance.model.SpeedModel",
+    "RubyColorModel" : "nodagumi.ananPJ.Gui.AgentAppearance.model.RubyColorModel",
     "RoundAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.RoundAgent",
     "SquareAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.SquareAgent",
     "TriangleAgent" : "nodagumi.ananPJ.Gui.AgentAppearance.view2d.TriangleAgent",
