fix ruby factory problem.
RubyFactory を使った場合、generation file の config を読んでいなかった問題をfix。

また、RubyFactory の ruby から、agent の config を渡せるように改良。

サンプルは、gridTown02rr.prop.json, SampleFactory2.rb, SampleAgent2rr.rb。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -315,6 +315,11 @@ run3gt02ds ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE3gt02ds))
 
 ##-----
+SAMPLE3gt02rr = sample/generatedTown/gridTown02rr.prop.json   # ruby factory/agent
+run3gt02rr ::
+	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE3gt02rr))
+
+##-----
 SAMPLE3gt03 = sample/generatedTown/gridTown03.prop.json   # ruby gate
 run3gt03 ::
 	(cd $(BASEDIR) ; bash quickstart.sh $(SAMPLE3gt03))
