Agents/Think の変更。Ruleの書き方のドキュメント増強。view_synchronized を設定できるように。
  * Agents/Think で、setParam で mentalMode を参照・変更できるようにした。
  * prop.json で、view_synchronized を設定することで、GUIの view_synchronized を
    設定できるようにした。
  * rule formula の書き方を、Agent/Think package の package-info.java に記述。

--- a/crowdwalk/src/main/java/nodagumi/Itk/Makefile
+++ b/crowdwalk/src/main/java/nodagumi/Itk/Makefile
@@ -263,6 +263,11 @@ run3gt00a_cui ::
 	(cd $(BASEDIR) ; time bash quickstart.sh -l Info --cui $(SAMPLE3gt00a))
 
 ##-----
+SAMPLE3gt00a2 = sample/generatedTown/gridTown00.array2.prop.json   # change mentalMode
+run3gt00a2 ::
+	(cd $(BASEDIR) ; bash quickstart.sh -l Info $(SAMPLE3gt00a))
+
+##-----
 SAMPLE3gt00i = sample/generatedTown/gridTown00.indivConf.prop.json   # array formula individual
 run3gt00i ::
 	(cd $(BASEDIR) ; bash quickstart.sh -l Info $(SAMPLE3gt00i))
